[PATCH] xcursorgen: Fix null pointer dereference on very large images.
Submitted by Tobias Stoeckmann
Assigned to Xorg Project Team
Link to original bug (#107023)
Description
Created attachment 140313 Patch to fix the issue
If xcursorgen encounters a PNG file which is larger than 32767 pixels in width or height, a null pointer dereference occurs because the return value of XcursorImageCreate is not checked.
The largest possible value is 32767 for libXcursor, which is a hard coded limit due to a 16 bit integer used (0x7FFF).
Patch 140313, "Patch to fix the issue":
xcursorgen-null.patch
Version: git